added servlet stuff

--- a/book.html
+++ b/book.html
@@ -41,6 +41,7 @@ html {
             <a href="deletebook.html">DELETE BOOK</a>
             <a href="updatebook.html">UPDATE BOOK</a>
             <a href="searchbook.html">SEARCH BOOK</a>
+            <a href="viewbook.html">VIEW BOOKS</a>
 			<a href="homepage.html">HOME</a>
 		</nav>
 	</div>
