--- a/bookuser.html
+++ b/bookuser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Book Details</title>
+	<title>Member Dashboard</title>
 </head>
 <style>
 body {
@@ -36,7 +36,7 @@ html {
 <body>
 	<div>
 		<nav class="navbar">
-			<p style="margin-left: 10px;">BOOK DASHBOARD</p>
+			<p style="margin-left: 10px;">MEMBER DASHBOARD</p>
             <a href="borrowbook.html">BORROW BOOK</a>
             <a href="renewbook.html">RENEW BOOK</a>
             <a href="reservebook.html">RESERVE BOOK</a>
