--- a/updatebook.html
+++ b/updatebook.html
@@ -20,7 +20,7 @@ html {
 .navbar {
 	overflow: hidden;
 	background-color: grey;
-	position: sticky;
+	position: sticky;	
 	top: 0;
 	width: 100%;
 }
@@ -63,7 +63,7 @@ html {
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 50px;">
 			<h2>Update Book</h2>
-			<form>
+			<form action="updatebook" method="post">
 				<label for="ISBN">ISBN&emsp;:&emsp;</label>
 				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="ISBN"><br><br><br>	
 				<label for="Title">Title&emsp;:&emsp;</label>
