--- a/addbook.html
+++ b/addbook.html
@@ -63,15 +63,17 @@ html {
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 50px;">
 			<h2>Add Book</h2>
-			<form>
+			<form action="addbook" method="post">
 				<label for="ISBN">ISBN&emsp;&emsp;&emsp;&emsp;&emsp;:&emsp;</label>
 				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="ISBN"><br><br><br>	
 				<label for="Title">Title&emsp;&emsp;&emsp;&emsp; &emsp;:&emsp;</label>
 				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Title"><br><br><br>
 				<label for="Author">Author&emsp;&emsp;&emsp;&emsp;:&emsp;</label>
 				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Author"><br><br><br>
-				<label for="Publishers">Publishers&emsp;&emsp; :&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Publishers"><br><br><br>
+				<label for="Genre">Genre&emsp;&emsp;&emsp; &emsp;:&emsp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Genre"><br><br><br>
+				<label for="Publisher">Publisher&emsp;&emsp; :&emsp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Publisher"><br><br><br>
 				<label for="Qty">Qty &emsp;&emsp;&emsp;&emsp;&ensp;:&emsp;</label>
 				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Qty"><br><br><br>
 				<button type="submit" value="submit" style="height: 40px; width: 120px; font-size: 20px;">Add book</button>&emsp;
