--- a/viewbook.html
+++ b/viewbook.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Delete book</title>
+	<title>View book</title>
 </head>
 <style>
 body {
@@ -62,14 +62,12 @@ html {
 	</header>
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 50px;">
-			<h2>Delete Book</h2>
-			<form action="deletebook" method="post">
-				<label for="ISBN">ISBN&emsp;:&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="ISBN"><br><br><br>
-				<button type="submit" value="submit" style="height: 40px; width: 200px; font-size: 20px;">Delete book</button>
-				<button type="reset" value="reset" style="height: 40px; width: 200px; font-size: 20px;">Cancel</button>
+			<h2>View Book</h2>
+			<form action="viewbook" method="post">
+                <button type="submit" value="viewbook" style="height: 40px; width: 220px; font-size: 20px;">view book record</button>
 			</form>
 		</div>
 	</div>
+	
 </body>
 </html>
