login pages corrected

--- a/faclogin.html
+++ b/faclogin.html
@@ -62,11 +62,11 @@ html {
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 10px;">
 			<h2>FACULTY LOGIN</h2>
-			<form>
-				<label for="emailid">Email ID &emsp;:&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="username"><br><br><br>	
+			<form action="faclogin", method="post">
+				<label for="userid">User ID &emsp;:&emsp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="userid"><br><br><br>	
 				<label for="password">Password &emsp;:&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="password"><br><br><br>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="password" name="password"><br><br><br>
 				<button type="submit" value="login" style="height: 40px; width: 80px; font-size: 20px;">Login</button>
 				<button type="reset" value="cancel" style="height: 40px; width: 80px; font-size: 20px;">Cancel</button><br><br>
 				<a href="forgotpassword.html">*forgot password</a><br><br>
