--- a/bookuser.html
+++ b/bookuser.html
@@ -34,7 +34,7 @@ html {
 
 </style>
 <body>
-	<div>
+	<div style="background-color: white;">
 		<nav class="navbar">
 			<p style="margin-left: 10px;">MEMBER DASHBOARD</p>
             <a href="borrowbook.html">BORROW BOOK</a>
