--- a/searchbook.html
+++ b/searchbook.html
@@ -82,22 +82,28 @@ html {
 	</header>
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 50px;">
-			<h2>Search Book by Title</h2>
-			<label for="Title">Title&ensp;:&ensp;</label>
-			<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Title"><br><br><br>	
-			<button type="submit" value="login" style="height: 40px; width: 200px; font-size: 20px;">Search book</button>
+			<form action="searchtitle" method="post">
+				<h2>Search Book by Title</h2>
+				<label for="Title">Title&ensp;:&ensp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Title"><br><br><br>	
+				<button type="submit" value="login" style="height: 40px; width: 200px; font-size: 20px;">Search book</button>
+			</form>
 		</div>
 		<div class="left" style="text-align: center; font-size: 20px; margin-top: 50px;">
-			<h2>Search Book by Book id</h2>
-			<label for="ISBN">ISBN&ensp;:&ensp;</label>
-			<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="ISBN"><br><br><br>	
-			<button type="submit" value="login" style="height: 40px; width: 200px; font-size: 20px;">Search book</button>
+			<form action="searchisbn" method="post">
+				<h2>Search Book by ISBN</h2>
+				<label for="ISBN">ISBN&ensp;:&ensp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="ISBN"><br><br><br>	
+				<button type="submit" value="login" style="height: 40px; width: 200px; font-size: 20px;">Search book</button>
+			</form>
 		</div>
 		<div class="right" style="text-align: center; font-size: 20px; margin-top: 50px;">
-			<h2>Search Book By Author</h2>
-			<label for="Author">Author&ensp;:&ensp;</label>
-			<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Author"><br><br><br>	
-			<button type="submit" value="login" style="height: 40px; width: 200px; font-size: 20px;">Search book</button>
+			<form action="searchauthor" method="post">
+				<h2>Search Book By Author</h2>
+				<label for="Author">Author&ensp;:&ensp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Author"><br><br><br>	
+				<button type="submit" value="login" style="height: 40px; width: 200px; font-size: 20px;">Search book</button>
+			</form>
 		</div>
 	</div>
 </body>
