--- a/createlibacc.html
+++ b/createlibacc.html
@@ -74,13 +74,13 @@ button{
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 150px;">
 			<h2>Create Librarian Account</h2>
-			<form>
+			<form action="createlibacc" method="post">
 				<label for="userid">User ID&emsp;&emsp;&emsp; :&emsp;</label>
 				<input type="text" name="userid"><br><br><br>
 				<label for="name">Name&emsp;&emsp;&emsp;&ensp; :&emsp;</label>
 				<input type="text" name="name"><br><br><br>	
 				<label for="emailid">Email ID&emsp;&emsp;&nbsp; :&emsp;</label>
-				<input type="text" name="username"><br><br><br>	
+				<input type="text" name="emailid"><br><br><br>	
 				<label for="password">Password&emsp;&emsp; :&emsp;</label>
 				<input type="password" name="password"><br><br><br>
 				<label for="age">Age&emsp;&emsp;&emsp;&emsp; :&emsp;</label>
