member dashboard servlets done

--- a/bookuser.html
+++ b/bookuser.html
@@ -40,7 +40,7 @@ html {
             <a href="borrowbook.html">BORROW BOOK</a>
             <a href="renewbook.html">RENEW BOOK</a>
             <a href="reservebook.html">RESERVE BOOK</a>
-            <a href="searchbook.html">SEARCH BOOK</a>
+            <a href="searchbookuser.html">SEARCH BOOK</a>
             <a href="checkfine.html">FINE DETAILS</a>
 			<a href="homepage.html">HOME</a>
 		</nav>
