--- a/borrowbook.html
+++ b/borrowbook.html
@@ -55,7 +55,7 @@ html {
 	<header>
 		<nav class="navbar">
 			<a href="feedback.html">FEEDBACK</a>
-			<a href="book.html">BOOKS</a>
+			<a href="bookuser.html">BOOKS</a>
 			<a href="homepage.html">HOME</a>
 			<p style="margin-left: 10px;">ONLINE LIBRARY MANAGEMENT SYSTEM</p>
 		</nav>
@@ -63,15 +63,11 @@ html {
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 50px;">
 			<h2>Borrow Book</h2>
-			<form>
-				<label for="LIBID">LIBID &emsp;&emsp;&nbsp;:&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="LIBID"><br><br><br> 
-				<label for="Title">Title&emsp;&emsp;&emsp; :&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Title"><br><br><br>
-				<label for="Author">Author&emsp;&emsp;&ensp;:&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Author"><br><br><br>
-				<label for="Publishers">Publishers &emsp;:&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="Publishers"><br><br><br>
+			<form action="borrowbook" method="post">
+				<label for="userid">Confirm User ID &emsp;&emsp;&nbsp;:&emsp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="userid"><br><br><br> 
+				<label for="isbn">ISBN &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;:&emsp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="isbn"><br><br><br> 
 				<button type="submit" value="submit" style="height: 40px; width: 150px; font-size: 20px;">Borrow book</button>
 				<button type="reset" value="reset" style="height: 40px; width: 150px; font-size: 20px;">Cancel</button>
 			</form>
