--- a/checkfine.html
+++ b/checkfine.html
@@ -63,14 +63,11 @@ html {
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 50px;">
 			<h2>Fine Details</h2>
-			
-			<label for="LIBID">LIBID&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;:&emsp;</label>
-			<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="LIBID"><br><br><br>	
-				
-			<label for="booksissued">No_of_books_borrowed :&emsp;</label>
-			<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="booksissued"><br><br><br>	
-			
-			<button type="submit" value="login" style="height: 40px; width: 220px; font-size: 20px;">Check fine</button>
+			<form action="checkfine" method="post">
+				<label for="userid">Confirm User ID&emsp;&emsp;&emsp;&ensp;:&emsp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="userid"><br><br><br>		
+				<button type="submit" value="login" style="height: 40px; width: 220px; font-size: 20px;">Check fine</button>
+			</form>
 		</div>
 	</div>
 </body>
