--- a/checkfine.html
+++ b/checkfine.html
@@ -2,53 +2,23 @@
 <html>
 <head>
 	<title>Fine details</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <style>
-body {
-	margin:0;
-}
-
 html {
-	min-height: 100%;
 	background-image: url(addbooks.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-attachment: fixed;
 }
-
 .navbar {
-	overflow: hidden;
 	background-color: grey;
 	position: sticky;
-	top: 0;
-	width: 100%;
 }
-
-.navbar a {
-	float: right;
-	display: block;
-	color: black;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 15px;
-}
-
-.navbar a:hover {
-	background: green;
-	color: black;
-}
-
 .centered {
-	position: absolute;
 	background-color: #6087a0;
 	opacity: .6;
 	color: white;
 	top: 52%;
 	left: 50%;
 	padding: 50px 70px;
-	transform: translate(-50%, -50%);
 }
 </style>
 <body >
