--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -2,53 +2,21 @@
 <html>
 <head>
 	<title>Forgotpassword login</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <style>
-body {
-	margin:0;
-}
-
 html {
-	min-height: 100%;
 	background-image: url(login.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-attachment: fixed;
 }
-
 .navbar {
-	overflow: hidden;
 	background-color: grey;
-	position: fixed;
-	top: 0;
-	width: 100%;
 }
-
-.navbar a {
-	float: right;
-	display: block;
-	color: black;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 15px;
-}
-
-.navbar a:hover {
-	background: green;
-	color: black;
-}
-
 .centered {
-	position: absolute;
 	background-color: #6087a0;
 	opacity: .6;
 	color: white;
-	top: 50%;
 	left: 50%;
 	padding: 50px 70px;
-	transform: translate(-50%, -50%);
 }
 </style>
 <body >
@@ -62,11 +30,11 @@ html {
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 10px;">
 			<h2>Change password</h2>
-			<form>
-				<label for="emailid">Email ID &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="username"><br><br><br>	
+			<form action="forgotpassword" method="post">
+				<label for="userid">User ID &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&emsp;</label>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="userid"><br><br><br>	
 				<label for="password">New Password :&emsp;</label>
-				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="password"><br><br><br>
+				<input style="border-radius: 50px; height: 30px; width: 200px;" type="password" name="password"><br><br><br>
 				<button type="submit" value="login" style="height: 40px; width: 80px; font-size: 20px;">Submit</button>
 				<button type="reset" value="cancel" style="height: 40px; width: 80px; font-size: 20px;">Cancel</button><br><br>
 			</form>
