--- a/homepage.html
+++ b/homepage.html
@@ -2,51 +2,8 @@
 <html>
 <head>
 	<title>Library Management System</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<style>
-body {
-	margin:0;
-}
-
-html {
-	min-height: 100%;
-	background-image: url(home.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-attachment: fixed;
-}
-
-.navbar {
-	overflow: hidden;
-	background-color: lightblue;
-	position: fixed;
-	top: 0;
-	width: 100%;
-}
-
-.navbar a {
-	float: right;
-	display: block;
-	color: black;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 15px;
-}
-
-.navbar a:hover {
-	background: green;
-	color: black;
-}
-.centered {
-	position: absolute;
-	top: 50%;
-	left: 70%;
-	transform: translate(-50%, -50%);
-}
-
-</style>
 <body>
 	<header>
 		<nav class="navbar">
