--- a/returnbook.html
+++ b/returnbook.html
@@ -31,7 +31,7 @@ html {
 	</header>
 	<div>
 		<div class="centered" style="text-align: center; font-size: 20px; margin-top: 50px;">
-			<h2>Renew Book</h2>
+			<h2>Return Book</h2>
 			<form action="returnbook" method="post">
 				<label for="userid">Confirm User ID&emsp;:&emsp;</label>
 				<input style="border-radius: 50px; height: 30px; width: 200px;" type="text" name="userid"><br><br><br>  
